--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,32 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.0.0
+  http: ^0.13.1
+
+
+  flutter_native_splash: ^0.2.8
+
+# run: flutter clean && flutter pub get && flutter pub run flutter_native_splash:create
+flutter_native_splash:
+  color: "#1e3238"
+  image: assets/dictionary.png
+  android: true
+  ios: true
+  android_ggravity: fill
+  ios_content_mode: scaleAspectfill
+  fullscreen: true
+
+
+
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  cupertino_icons: ^1.0.2
-  flutter_bloc: ^7.0.0
-  http: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,9 +78,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#   assets:
+#     - assets/dictionary_icon.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
